{
  "version": 4,
  "terraform_version": "0.12.13",
  "serial": 57,
  "lineage": "940c53df-8694-ee4c-12a0-0514b57349b2",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "demo",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "name": "publicIP",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/8c2ec02f-42e9-40fc-8135-5e483f02feda/resourceGroups/Demo_Resources/providers/Microsoft.Network/publicIPAddresses/PubIP"
              }
            ],
            "id": "/subscriptions/8c2ec02f-42e9-40fc-8135-5e483f02feda/resourceGroups/Demo_Resources/providers/Microsoft.Network/loadBalancers/AzureLoadBalancer",
            "location": "westus",
            "name": "AzureLoadBalancer",
            "resource_group_name": "Demo_Resources",
            "sku": "Basic",
            "tags": {
              "Author": "Teren Bryson",
              "Environment": "Demo",
              "Maintained_by": "Teren Bryson"
            }
          },
          "depends_on": [
            "azurerm_public_ip.demo",
            "azurerm_resource_group.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "demo",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/8c2ec02f-42e9-40fc-8135-5e483f02feda/resourceGroups/Demo_Resources/providers/Microsoft.Network/loadBalancers/AzureLoadBalancer/backendAddressPools/BackEndAddressPool",
            "loadbalancer_id": "/subscriptions/8c2ec02f-42e9-40fc-8135-5e483f02feda/resourceGroups/Demo_Resources/providers/Microsoft.Network/loadBalancers/AzureLoadBalancer",
            "name": "BackEndAddressPool",
            "resource_group_name": "Demo_Resources"
          },
          "depends_on": [
            "azurerm_lb.demo",
            "azurerm_resource_group.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "demo",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/8c2ec02f-42e9-40fc-8135-5e483f02feda/resourceGroups/Demo_Resources/providers/Microsoft.Network/loadBalancers/AzureLoadBalancer/probes/ssh-probe",
            "interval_in_seconds": 15,
            "loadbalancer_id": "/subscriptions/8c2ec02f-42e9-40fc-8135-5e483f02feda/resourceGroups/Demo_Resources/providers/Microsoft.Network/loadBalancers/AzureLoadBalancer",
            "name": "ssh-probe",
            "number_of_probes": 2,
            "port": 22,
            "protocol": "Tcp",
            "resource_group_name": "Demo_Resources"
          },
          "depends_on": [
            "azurerm_lb.demo",
            "azurerm_resource_group.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "sshlbrule",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/8c2ec02f-42e9-40fc-8135-5e483f02feda/resourceGroups/Demo_Resources/providers/Microsoft.Network/loadBalancers/AzureLoadBalancer/backendAddressPools/BackEndAddressPool",
            "backend_port": 22,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "frontend_ip_configuration_id": "/subscriptions/8c2ec02f-42e9-40fc-8135-5e483f02feda/resourceGroups/Demo_Resources/providers/Microsoft.Network/loadBalancers/AzureLoadBalancer/frontendIPConfigurations/publicIP",
            "frontend_ip_configuration_name": "publicIP",
            "frontend_port": 22,
            "id": "/subscriptions/8c2ec02f-42e9-40fc-8135-5e483f02feda/resourceGroups/Demo_Resources/providers/Microsoft.Network/loadBalancers/AzureLoadBalancer/loadBalancingRules/ssh-LB-Rule",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/8c2ec02f-42e9-40fc-8135-5e483f02feda/resourceGroups/Demo_Resources/providers/Microsoft.Network/loadBalancers/AzureLoadBalancer",
            "name": "ssh-LB-Rule",
            "probe_id": "/subscriptions/8c2ec02f-42e9-40fc-8135-5e483f02feda/resourceGroups/Demo_Resources/providers/Microsoft.Network/loadBalancers/AzureLoadBalancer/probes/ssh-probe",
            "protocol": "Tcp",
            "resource_group_name": "Demo_Resources"
          },
          "depends_on": [
            "azurerm_lb.demo",
            "azurerm_lb_backend_address_pool.demo",
            "azurerm_lb_probe.demo",
            "azurerm_resource_group.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "weblbrule",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/8c2ec02f-42e9-40fc-8135-5e483f02feda/resourceGroups/Demo_Resources/providers/Microsoft.Network/loadBalancers/AzureLoadBalancer/backendAddressPools/BackEndAddressPool",
            "backend_port": 80,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "frontend_ip_configuration_id": "/subscriptions/8c2ec02f-42e9-40fc-8135-5e483f02feda/resourceGroups/Demo_Resources/providers/Microsoft.Network/loadBalancers/AzureLoadBalancer/frontendIPConfigurations/publicIP",
            "frontend_ip_configuration_name": "publicIP",
            "frontend_port": 80,
            "id": "/subscriptions/8c2ec02f-42e9-40fc-8135-5e483f02feda/resourceGroups/Demo_Resources/providers/Microsoft.Network/loadBalancers/AzureLoadBalancer/loadBalancingRules/web-LB-Rule",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/8c2ec02f-42e9-40fc-8135-5e483f02feda/resourceGroups/Demo_Resources/providers/Microsoft.Network/loadBalancers/AzureLoadBalancer",
            "name": "web-LB-Rule",
            "probe_id": "/subscriptions/8c2ec02f-42e9-40fc-8135-5e483f02feda/resourceGroups/Demo_Resources/providers/Microsoft.Network/loadBalancers/AzureLoadBalancer/probes/ssh-probe",
            "protocol": "Tcp",
            "resource_group_name": "Demo_Resources"
          },
          "depends_on": [
            "azurerm_lb.demo",
            "azurerm_lb_backend_address_pool.demo",
            "azurerm_lb_probe.demo",
            "azurerm_resource_group.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "weblbrule2",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/8c2ec02f-42e9-40fc-8135-5e483f02feda/resourceGroups/Demo_Resources/providers/Microsoft.Network/loadBalancers/AzureLoadBalancer/backendAddressPools/BackEndAddressPool",
            "backend_port": 8080,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "frontend_ip_configuration_id": "/subscriptions/8c2ec02f-42e9-40fc-8135-5e483f02feda/resourceGroups/Demo_Resources/providers/Microsoft.Network/loadBalancers/AzureLoadBalancer/frontendIPConfigurations/publicIP",
            "frontend_ip_configuration_name": "publicIP",
            "frontend_port": 8080,
            "id": "/subscriptions/8c2ec02f-42e9-40fc-8135-5e483f02feda/resourceGroups/Demo_Resources/providers/Microsoft.Network/loadBalancers/AzureLoadBalancer/loadBalancingRules/web-LB-Rule2",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/8c2ec02f-42e9-40fc-8135-5e483f02feda/resourceGroups/Demo_Resources/providers/Microsoft.Network/loadBalancers/AzureLoadBalancer",
            "name": "web-LB-Rule2",
            "probe_id": "/subscriptions/8c2ec02f-42e9-40fc-8135-5e483f02feda/resourceGroups/Demo_Resources/providers/Microsoft.Network/loadBalancers/AzureLoadBalancer/probes/ssh-probe",
            "protocol": "Tcp",
            "resource_group_name": "Demo_Resources"
          },
          "depends_on": [
            "azurerm_lb.demo",
            "azurerm_lb_backend_address_pool.demo",
            "azurerm_lb_probe.demo",
            "azurerm_resource_group.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "weblbrule3",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/8c2ec02f-42e9-40fc-8135-5e483f02feda/resourceGroups/Demo_Resources/providers/Microsoft.Network/loadBalancers/AzureLoadBalancer/backendAddressPools/BackEndAddressPool",
            "backend_port": 443,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "frontend_ip_configuration_id": "/subscriptions/8c2ec02f-42e9-40fc-8135-5e483f02feda/resourceGroups/Demo_Resources/providers/Microsoft.Network/loadBalancers/AzureLoadBalancer/frontendIPConfigurations/publicIP",
            "frontend_ip_configuration_name": "publicIP",
            "frontend_port": 443,
            "id": "/subscriptions/8c2ec02f-42e9-40fc-8135-5e483f02feda/resourceGroups/Demo_Resources/providers/Microsoft.Network/loadBalancers/AzureLoadBalancer/loadBalancingRules/web-LB-Rule3",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/8c2ec02f-42e9-40fc-8135-5e483f02feda/resourceGroups/Demo_Resources/providers/Microsoft.Network/loadBalancers/AzureLoadBalancer",
            "name": "web-LB-Rule3",
            "probe_id": "/subscriptions/8c2ec02f-42e9-40fc-8135-5e483f02feda/resourceGroups/Demo_Resources/providers/Microsoft.Network/loadBalancers/AzureLoadBalancer/probes/ssh-probe",
            "protocol": "Tcp",
            "resource_group_name": "Demo_Resources"
          },
          "depends_on": [
            "azurerm_lb.demo",
            "azurerm_lb_backend_address_pool.demo",
            "azurerm_lb_probe.demo",
            "azurerm_resource_group.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "demo",
      "each": "list",
      "provider": "provider.azurerm",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/8c2ec02f-42e9-40fc-8135-5e483f02feda/resourceGroups/Demo_Resources/providers/Microsoft.Network/networkInterfaces/lbNIC0",
            "ip_configuration": [
              {
                "load_balancer_backend_address_pools_ids": [
                  "/subscriptions/8c2ec02f-42e9-40fc-8135-5e483f02feda/resourceGroups/Demo_Resources/providers/Microsoft.Network/loadBalancers/AzureLoadBalancer/backendAddressPools/BackEndAddressPool"
                ],
                "name": "myNicConfiguration",
                "primary": true,
                "private_ip_address_allocation": "dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/8c2ec02f-42e9-40fc-8135-5e483f02feda/resourceGroups/Demo_Resources/providers/Microsoft.Network/virtualNetworks/TvNet/subnets/TSub"
              }
            ],
            "location": "westus",
            "name": "lbNIC0",
            "network_security_group_id": "/subscriptions/8c2ec02f-42e9-40fc-8135-5e483f02feda/resourceGroups/Demo_Resources/providers/Microsoft.Network/networkSecurityGroups/myNetworkSecurityGroup",
            "private_ip_address": "10.0.2.6",
            "private_ip_addresses": [
              "10.0.2.6"
            ],
            "resource_group_name": "Demo_Resources",
            "tags": {
              "Author": "Teren Bryson",
              "Environment": "Demo",
              "Maintained_by": "Teren Bryson"
            }
          },
          "depends_on": [
            "azurerm_lb_backend_address_pool.demo",
            "azurerm_network_security_group.lb_security",
            "azurerm_resource_group.demo",
            "azurerm_subnet.demo"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/8c2ec02f-42e9-40fc-8135-5e483f02feda/resourceGroups/Demo_Resources/providers/Microsoft.Network/networkInterfaces/lbNIC1",
            "ip_configuration": [
              {
                "load_balancer_backend_address_pools_ids": [
                  "/subscriptions/8c2ec02f-42e9-40fc-8135-5e483f02feda/resourceGroups/Demo_Resources/providers/Microsoft.Network/loadBalancers/AzureLoadBalancer/backendAddressPools/BackEndAddressPool"
                ],
                "name": "myNicConfiguration",
                "primary": true,
                "private_ip_address_allocation": "dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/8c2ec02f-42e9-40fc-8135-5e483f02feda/resourceGroups/Demo_Resources/providers/Microsoft.Network/virtualNetworks/TvNet/subnets/TSub"
              }
            ],
            "location": "westus",
            "name": "lbNIC1",
            "network_security_group_id": "/subscriptions/8c2ec02f-42e9-40fc-8135-5e483f02feda/resourceGroups/Demo_Resources/providers/Microsoft.Network/networkSecurityGroups/myNetworkSecurityGroup",
            "private_ip_address": "10.0.2.5",
            "private_ip_addresses": [
              "10.0.2.5"
            ],
            "resource_group_name": "Demo_Resources",
            "tags": {
              "Author": "Teren Bryson",
              "Environment": "Demo",
              "Maintained_by": "Teren Bryson"
            }
          },
          "depends_on": [
            "azurerm_lb_backend_address_pool.demo",
            "azurerm_network_security_group.lb_security",
            "azurerm_resource_group.demo",
            "azurerm_subnet.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "demo_app1",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/8c2ec02f-42e9-40fc-8135-5e483f02feda/resourceGroups/Demo_Resources/providers/Microsoft.Network/networkInterfaces/appNIC1",
            "ip_configuration": [
              {
                "name": "App1NicConfiguration",
                "primary": true,
                "private_ip_address": "10.0.2.10",
                "private_ip_address_allocation": "static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/8c2ec02f-42e9-40fc-8135-5e483f02feda/resourceGroups/Demo_Resources/providers/Microsoft.Network/virtualNetworks/TvNet/subnets/TSub"
              }
            ],
            "location": "westus",
            "name": "appNIC1",
            "network_security_group_id": "/subscriptions/8c2ec02f-42e9-40fc-8135-5e483f02feda/resourceGroups/Demo_Resources/providers/Microsoft.Network/networkSecurityGroups/myNetworkSecurityGroup",
            "private_ip_address": "10.0.2.10",
            "private_ip_addresses": [
              "10.0.2.10"
            ],
            "resource_group_name": "Demo_Resources",
            "tags": {
              "Author": "Teren Bryson",
              "Environment": "Demo",
              "Maintained_by": "Teren Bryson"
            }
          },
          "depends_on": [
            "azurerm_network_security_group.lb_security",
            "azurerm_resource_group.demo",
            "azurerm_subnet.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "demo_app2",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/8c2ec02f-42e9-40fc-8135-5e483f02feda/resourceGroups/Demo_Resources/providers/Microsoft.Network/networkInterfaces/appNIC2",
            "ip_configuration": [
              {
                "name": "App2NicConfiguration",
                "primary": true,
                "private_ip_address": "10.0.2.11",
                "private_ip_address_allocation": "static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/8c2ec02f-42e9-40fc-8135-5e483f02feda/resourceGroups/Demo_Resources/providers/Microsoft.Network/virtualNetworks/TvNet/subnets/TSub"
              }
            ],
            "location": "westus",
            "name": "appNIC2",
            "network_security_group_id": "/subscriptions/8c2ec02f-42e9-40fc-8135-5e483f02feda/resourceGroups/Demo_Resources/providers/Microsoft.Network/networkSecurityGroups/myNetworkSecurityGroup",
            "private_ip_address": "10.0.2.11",
            "private_ip_addresses": [
              "10.0.2.11"
            ],
            "resource_group_name": "Demo_Resources",
            "tags": {
              "Author": "Teren Bryson",
              "Environment": "Demo",
              "Maintained_by": "Teren Bryson"
            }
          },
          "depends_on": [
            "azurerm_network_security_group.lb_security",
            "azurerm_resource_group.demo",
            "azurerm_subnet.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "jumpbox",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/8c2ec02f-42e9-40fc-8135-5e483f02feda/resourceGroups/Demo_Resources/providers/Microsoft.Network/networkInterfaces/jumpbox-nic",
            "ip_configuration": [
              {
                "name": "IPConfiguration",
                "primary": true,
                "private_ip_address_allocation": "dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/8c2ec02f-42e9-40fc-8135-5e483f02feda/resourceGroups/Demo_Resources/providers/Microsoft.Network/publicIPAddresses/jumpbox-public-ip",
                "subnet_id": "/subscriptions/8c2ec02f-42e9-40fc-8135-5e483f02feda/resourceGroups/Demo_Resources/providers/Microsoft.Network/virtualNetworks/TvNet/subnets/TSub"
              }
            ],
            "location": "westus",
            "name": "jumpbox-nic",
            "network_security_group_id": "/subscriptions/8c2ec02f-42e9-40fc-8135-5e483f02feda/resourceGroups/Demo_Resources/providers/Microsoft.Network/networkSecurityGroups/JumpBoxSecurityGroup",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "Demo_Resources",
            "tags": {
              "Author": "Teren Bryson",
              "Environment": "Demo",
              "Maintained_by": "Teren Bryson"
            }
          },
          "depends_on": [
            "azurerm_network_security_group.jumpbox_security",
            "azurerm_public_ip.jumpbox",
            "azurerm_resource_group.demo",
            "azurerm_subnet.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "jumpbox_security",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/8c2ec02f-42e9-40fc-8135-5e483f02feda/resourceGroups/Demo_Resources/providers/Microsoft.Network/networkSecurityGroups/JumpBoxSecurityGroup",
            "location": "westus",
            "name": "JumpBoxSecurityGroup",
            "resource_group_name": "Demo_Resources",
            "security_rule": [],
            "tags": {
              "Author": "Teren Bryson",
              "Environment": "Demo",
              "Maintained_by": "Teren Bryson"
            }
          },
          "depends_on": [
            "azurerm_resource_group.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "lb_security",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/8c2ec02f-42e9-40fc-8135-5e483f02feda/resourceGroups/Demo_Resources/providers/Microsoft.Network/networkSecurityGroups/myNetworkSecurityGroup",
            "location": "westus",
            "name": "myNetworkSecurityGroup",
            "resource_group_name": "Demo_Resources",
            "security_rule": [],
            "tags": {
              "Author": "Teren Bryson",
              "Environment": "Demo",
              "Maintained_by": "Teren Bryson"
            }
          },
          "depends_on": [
            "azurerm_resource_group.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "http_rule1",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "80",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/8c2ec02f-42e9-40fc-8135-5e483f02feda/resourceGroups/Demo_Resources/providers/Microsoft.Network/networkSecurityGroups/myNetworkSecurityGroup/securityRules/lb_Web",
            "name": "lb_Web",
            "network_security_group_name": "myNetworkSecurityGroup",
            "priority": 1002,
            "protocol": "Tcp",
            "resource_group_name": "Demo_Resources",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null
          },
          "depends_on": [
            "azurerm_network_security_group.lb_security",
            "azurerm_resource_group.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "http_rule2",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "8080",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/8c2ec02f-42e9-40fc-8135-5e483f02feda/resourceGroups/Demo_Resources/providers/Microsoft.Network/networkSecurityGroups/myNetworkSecurityGroup/securityRules/lb_Web",
            "name": "lb_Web",
            "network_security_group_name": "myNetworkSecurityGroup",
            "priority": 1003,
            "protocol": "Tcp",
            "resource_group_name": "Demo_Resources",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null
          },
          "depends_on": [
            "azurerm_network_security_group.lb_security",
            "azurerm_resource_group.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "https_rule",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "443",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/8c2ec02f-42e9-40fc-8135-5e483f02feda/resourceGroups/Demo_Resources/providers/Microsoft.Network/networkSecurityGroups/myNetworkSecurityGroup/securityRules/lb_Web",
            "name": "lb_Web",
            "network_security_group_name": "myNetworkSecurityGroup",
            "priority": 1004,
            "protocol": "Tcp",
            "resource_group_name": "Demo_Resources",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null
          },
          "depends_on": [
            "azurerm_network_security_group.lb_security",
            "azurerm_resource_group.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "jb_ssh_rule",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/8c2ec02f-42e9-40fc-8135-5e483f02feda/resourceGroups/Demo_Resources/providers/Microsoft.Network/networkSecurityGroups/JumpBoxSecurityGroup/securityRules/jb_ssh",
            "name": "jb_ssh",
            "network_security_group_name": "JumpBoxSecurityGroup",
            "priority": 1001,
            "protocol": "Tcp",
            "resource_group_name": "Demo_Resources",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null
          },
          "depends_on": [
            "azurerm_network_security_group.jumpbox_security",
            "azurerm_resource_group.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "lb_ssh_rule",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/8c2ec02f-42e9-40fc-8135-5e483f02feda/resourceGroups/Demo_Resources/providers/Microsoft.Network/networkSecurityGroups/myNetworkSecurityGroup/securityRules/lb_ssh",
            "name": "lb_ssh",
            "network_security_group_name": "myNetworkSecurityGroup",
            "priority": 1001,
            "protocol": "Tcp",
            "resource_group_name": "Demo_Resources",
            "source_address_prefix": "10.0.2.0/24",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null
          },
          "depends_on": [
            "azurerm_network_security_group.lb_security",
            "azurerm_resource_group.demo",
            "azurerm_subnet.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "demo",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "domain_name_label": "umbrellacorp",
            "fqdn": "umbrellacorp.westus.cloudapp.azure.com",
            "id": "/subscriptions/8c2ec02f-42e9-40fc-8135-5e483f02feda/resourceGroups/Demo_Resources/providers/Microsoft.Network/publicIPAddresses/PubIP",
            "idle_timeout_in_minutes": 4,
            "ip_address": "13.64.191.191",
            "ip_version": "IPv4",
            "location": "westus",
            "name": "PubIP",
            "public_ip_address_allocation": "Static",
            "resource_group_name": "Demo_Resources",
            "sku": "Basic",
            "tags": {
              "Author": "Teren Bryson",
              "Environment": "Demo",
              "Maintained_by": "Teren Bryson"
            }
          },
          "depends_on": [
            "azurerm_resource_group.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "jumpbox",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "domain_name_label": "umbrellacorp-ssh",
            "fqdn": "umbrellacorp-ssh.westus.cloudapp.azure.com",
            "id": "/subscriptions/8c2ec02f-42e9-40fc-8135-5e483f02feda/resourceGroups/Demo_Resources/providers/Microsoft.Network/publicIPAddresses/jumpbox-public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "13.64.184.130",
            "ip_version": "IPv4",
            "location": "westus",
            "name": "jumpbox-public-ip",
            "public_ip_address_allocation": "Static",
            "resource_group_name": "Demo_Resources",
            "sku": "Basic",
            "tags": {
              "Author": "Teren Bryson",
              "Environment": "Demo",
              "Maintained_by": "Teren Bryson"
            }
          },
          "depends_on": [
            "azurerm_resource_group.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "demo",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.2.0/24",
            "id": "/subscriptions/8c2ec02f-42e9-40fc-8135-5e483f02feda/resourceGroups/Demo_Resources/providers/Microsoft.Network/virtualNetworks/TvNet/subnets/TSub",
            "name": "TSub",
            "resource_group_name": "Demo_Resources",
            "virtual_network_name": "TvNet"
          },
          "depends_on": [
            "azurerm_resource_group.demo",
            "azurerm_virtual_network.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "demo",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "id": "/subscriptions/8c2ec02f-42e9-40fc-8135-5e483f02feda/resourceGroups/Demo_Resources/providers/Microsoft.Network/virtualNetworks/TvNet",
            "location": "westus",
            "name": "TvNet",
            "resource_group_name": "Demo_Resources",
            "tags": {
              "Author": "Teren Bryson",
              "Environment": "Demo",
              "Maintained_by": "Teren Bryson"
            }
          },
          "depends_on": [
            "azurerm_resource_group.demo"
          ]
        }
      ]
    }
  ]
}